@@ -22,9 +22,9 @@
                   <img src="../../img/static/profile.svg" class="card-img-top img-dark-invert" alt="Immagine del profilo" style="max-width: 150px; height: auto;" />
                   <h2 class="mt-4 mb-3">Profilo</h2>
                   <div class="d-flex justify-content-between align-items-left flex-column">
-                    <h4 class="small-text profile-field"><strong>NOME:</strong> <span id="profile-name"></span></h4>
-                    <h4 class="small-text profile-field"><strong>COGNOME:</strong> <span id="profile-surname"></span></h4>
-                    <h4 class="small-text profile-field"><strong>USERNAME:</strong> <span id="profile-username"></span></h4>
+                    <h4 class="normal-text profile-field"><strong>NOME:</strong> <span id="profile-name"></span></h4>
+                    <h4 class="normal-text profile-field"><strong>COGNOME:</strong> <span id="profile-surname"></span></h4>
+                    <h4 class="normal-text profile-field"><strong>USERNAME:</strong> <span id="profile-username"></span></h4>
                   </div>
 
                   <div class="mt-4 d-flex align-items-center flex-column">
